# gemini-lite

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  gemini-lite.desktop  install.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
debian/: postinst  postrm
docs/architecture/: ADR-001-concurrency-model.md  ADR-002-secret-storage.md  ADR-003-token-management.md
src/: api.rs  config.rs  history.rs  lib.rs  main.rs  sse.rs  ui.rs
tests/: stream_integration.rs
