[package]
name = "gemini-lite"
version = "0.2.0"
edition = "2021"
description = "Lightweight native Gemini client for Linux — pure GTK + official API"
license = "MIT"
repository = "https://github.com/Tormknd/gemini-lite"

[dependencies]
anyhow     = "1"
async-channel = "2"
dotenvy    = "0.15"
env_logger = "0.11"
gio        = "0.18"
glib       = "0.18"
gtk        = "0.18"
keyring    = "3"
log        = "0.4"
reqwest    = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["rt-multi-thread"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
