[package]
name = "gemini-lite"
version = "0.1.1"
edition = "2021"
description = "Lightweight native Gemini client for Linux — pure GTK + official API"
license = "MIT"
repository = "https://github.com/Tormknd/gemini-lite"

[dependencies]
anyhow     = "1"
async-channel = "2"
dotenvy    = "0.15"
env_logger = "0.11"
gio        = "0.18"
glib       = "0.18"
gtk        = "0.18"
keyring    = "3"
log        = "0.4"
reqwest    = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"

[dev-dependencies]
wiremock = "0.6"
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[package.metadata.deb]
name = "gemini-lite"
maintainer = "Tormknd <https://github.com/Tormknd>"
copyright = "2026, Tormknd"
license-file = ["LICENSE", "4"]
section = "net"
priority = "optional"
revision = ""
depends = "$auto, libc6, libgtk-3-0, libglib2.0-0, libgtk-3-bin, desktop-file-utils"
maintainer-scripts = "debian"
extended-description = """\
 Lightweight native Gemini client for Linux (GTK 3, official REST API). \
 No embedded browser engine: low memory use and minimal runtime dependencies.\
"""
assets = [
  ["target/release/gemini-lite", "usr/bin/gemini-lite", "755"],
  ["gemini-lite.desktop", "usr/share/applications/gemini-lite.desktop", "644"],
  ["assets/Logo.png", "usr/share/icons/hicolor/512x512/apps/gemini-lite.png", "644"],
]
